[tool.poetry]
name = "inkwave-backend"
version = "0.1.0"
description = ""
authors = ["hsingyingli <xingyingli855@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
