[tool.poetry]
name = "inkwave-backend"
version = "0.1.0"
description = ""
authors = ["hsingyingli <xingyingli855@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.group.main.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pyflakes = "^3.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
faker = "^33.0.0"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
